@@ -5,7 +5,7 @@ from .context import (dispatch_method, DispatchMethod,
 from .arginfo import arginfo
 from .argextract import KeyExtractor
 from .sentinel import Sentinel, NOT_FOUND
-from .error import RegistrationError, KeyExtractorError
+from .error import RegistrationError
 from .predicate import (Predicate, PredicateRegistry, KeyIndex, ClassIndex,
                         key_predicate, class_predicate,
                         match_key, match_instance, match_argname,
