@@ -1,8 +1,3 @@
 class RegistrationError(Exception):
     """Registration error.
     """
-
-
-class KeyExtractorError(Exception):
-    """A lookup key could not be constructed.
-    """
